--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -66,3 +66,14 @@
   border: none;
   cursor: pointer;
 }
+.haveAccountBtn {
+  padding: 15px;
+  margin-top: 40px;
+  font-weight: bold;
+  font-size: 18px;
+  background-color: rgb(41, 247, 202);
+  color: rgb(32, 1, 61);
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
