--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -66,6 +66,9 @@
   border: none;
   cursor: pointer;
 }
+.loginLink {
+  text-decoration: none;
+}
 .haveAccountBtn {
   padding: 15px;
   margin-top: 40px;
@@ -76,4 +79,6 @@
   border-radius: 5px;
   border: none;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
