--- a/src/component/topbar/topbar.css
+++ b/src/component/topbar/topbar.css
@@ -14,7 +14,9 @@
   justify-content: space-between;
   align-items: center;
 }
-
+.social-logo {
+  width: 35px;
+}
 .topbarLogo {
   font-size: 46px;
   margin-left: 20px;
