--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -19,6 +19,11 @@
   flex-direction: column;
   align-items: center;
 }
+.logo {
+  width: 200px;
+  object-fit: cover;
+  margin-bottom: 20px;
+}
 .registerLogo {
   font-size: 48px;
   margin-bottom: 20px;
@@ -68,6 +73,8 @@
 }
 .loginLink {
   text-decoration: none;
+  display: block;
+  margin: 0 auto;
 }
 .haveAccountBtn {
   padding: 15px;
@@ -79,6 +86,4 @@
   border-radius: 5px;
   border: none;
   cursor: pointer;
-  display: flex;
-  align-items: center;
 }
