--- a/src/component/topbar/topbar.css
+++ b/src/component/topbar/topbar.css
@@ -14,12 +14,17 @@
   justify-content: space-between;
   align-items: center;
 }
+.logoLink {
+  display: flex;
+  align-items: center;
+}
 .social-logo {
   width: 35px;
+  margin-left: 10px;
 }
 .topbarLogo {
-  font-size: 46px;
-  margin-left: 20px;
+  font-size: 25px;
+  margin-left: 10px;
   font-weight: 500;
   color: var(--logo);
   cursor: pointer;
